forget password changed to require existing email, secret mispelling fixed, footer and home spacing styling fixed, home page class to className

--- a/src/front/styles/index.css
+++ b/src/front/styles/index.css
@@ -1,6 +1,7 @@
 .notFoundDiv {
   min-height: 86vh;
 }
+
 /* .homeDiv {
   height: 86vh;
 } */
@@ -11,20 +12,20 @@
   align-items: center;
 }
 
-.account{
+.account {
   text-decoration: none;
 }
 
-.form-check-input:checked{
-  background-color: #aebb35 ;
+.form-check-input:checked {
+  background-color: #aebb35;
 }
 
-.form-check-input:focus{
+.form-check-input:focus {
   border-color: #aebb35;
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px #aebb35;
 }
 
-.form-control:focus{
+.form-control:focus {
   border-color: #aebb35;
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px #aebb35;
 }
@@ -33,7 +34,8 @@
   background-color: #aebb35;
   font-weight: bold;
 }
-.submitbtn:hover{
+
+.submitbtn:hover {
   background-color: #6f8624;
   color: antiquewhite;
 }
@@ -47,7 +49,7 @@
 } */
 
 
-#googleMapsApiDiv{
+#googleMapsApiDiv {
   min-height: 86.5vh;
 }
 
@@ -70,17 +72,19 @@
 .gm-ui-hover-effect>span {
   width: 25px !important;
   height: 25px !important;
-  }
+}
 
 .gm-ui-hover-effect {
   right: 12px !important;
   z-index: 2;
 }
 
-footer, #footer {
-    width: 100%;
-    margin: 0;
-  }
+footer {
+  width: 100%;
+  margin: 0;
+  position: absolute;
+  bottom: 0;
+}
 
 
 /* Media query for small screens (phones) */
@@ -90,5 +94,3 @@ footer, #footer {
       padding: 10px; 
     }
   } */
-
-  
